--- a/watcher_server/src/main/resources/application.properties
+++ b/watcher_server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=watcher_server
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/watcher_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=MYSQL_USERNAME
+spring.datasource.password=MYSQL_PASSWORD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
