--- a/watcher_server/src/main/resources/application.properties
+++ b/watcher_server/src/main/resources/application.properties
@@ -11,3 +11,4 @@ logging.level.root=INFO
 logging.level.com.watcher=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
