--- a/watcher_server/src/main/resources/application.properties
+++ b/watcher_server/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.root=INFO
 logging.level.com.watcher=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web.servlet.DispatcherServlet=INFO
 logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+logging.level.org.hibernate.SQL=INFO
