--- a/watcher_server/src/main/resources/application.properties
+++ b/watcher_server/src/main/resources/application.properties
@@ -7,10 +7,18 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
 logging.level.root=INFO
 logging.level.com.watcher=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=INFO
-logging.level.org.springframework.web.servlet.DispatcherServlet=INFO
-logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+#logging.level.org.springframework.web.servlet.DispatcherServlet=INFO
+#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 logging.level.org.hibernate.SQL=INFO
+logging.level.org.springdoc=DEBUG
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.configUrl=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
