--- a/watcher_server/src/main/resources/application.properties
+++ b/watcher_server/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.one-indexed-parameters=true
+
 logging.level.root=INFO
 logging.level.com.watcher=DEBUG
 logging.level.org.springframework.web=DEBUG
